deployment/app-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: python-app
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
